<resources>
    <string name="app_name">Internship Test</string>
    <string name="second_screen">Second Screen</string>
    <string name="third_screen">Third Screen</string>
    <string name="current_username">"current_username"</string>
    <string name="selected_username">"selected_username"</string>
    <string name="check">CHECK</string>
    <string name="image_view_description">Image View Description</string>
    <string name="name">Name</string>
    <string name="next">NEXT</string>
    <string name="palindrome">Palindrome</string>
    <string name="welcome">Welcome</string>
    <string name="placeholder_username">Placeholder Username</string>
    <string name="selected_username_tv">Selected Username</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="no_user_fetched">No User Fetched</string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="email_email_com">EMAIL@EMAIL.COM</string>
</resources>