<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:context=".ui.firstscreen.FirstScreenFragment">


    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:id="@+id/imageView"
        android:contentDescription="@string/image_view_description"
        android:layout_marginTop="142dp"
        android:src="@drawable/ic_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circleImageView"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/nameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginHorizontal="32dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="320dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/box_border"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            tools:ignore="KeyboardInaccessibleWidget" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/palindromeInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginHorizontal="32dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="320dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/box_border"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/palindromeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/palindrome"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            tools:ignore="KeyboardInaccessibleWidget" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="45dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/palindromeInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        android:backgroundTint="#2b637b"
        android:text="@string/check"
        android:textColor="@color/white"
        app:layout_constraintWidth_max="320dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/checkButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        android:backgroundTint="#2b637b"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintWidth_max="320dp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>